[project]
name = "miruzo-py"
dynamic = ["version"]
license = "GPL-3.0-or-later"
classifiers = [
	"Development Status :: 3 - Alpha",
	"Framework :: FastAPI",
	"Framework :: Pydantic :: 2",
	"Framework :: Pytest",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"

[project.scripts]
miruzo-api = "scripts.api:main"
miruzo-api-dev = "scripts.api:main_dev"
miruzo-decay = "scripts.daily_decay:main"
miruzo-import-gataku = "scripts.gataku_import:main"

[project.urls]
Repository = "https://github.com/mntone/miruzo-core"
Issues = "https://github.com/mntone/miruzo-core/issues"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["build", "tests"]
