[project]
name = "miruzo-py"
dynamic = ["version"]
license = "GPL-3.0-or-later"
classifiers = [
	"Development Status :: 3 - Alpha",
	"Framework :: Pydantic :: 2",
	"Framework :: Pytest",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Programming Language :: Python :: 3.14",
]
requires-python = ">=3.10"
dependencies = [
	"pillow>=12.2,<13",
	"pydantic-settings>=2.13,<2.14",
	"python-dotenv>=1.2.2,<1.3",
	"sqlalchemy>=2.0.49,<2.1",
]

[project.optional-dependencies]
dev = [
	"pytest>=9.0.3,<10",
	"pytest-cov>=7.1,<8",
	"testcontainers[mysql,postgres]>=4.14.2,<5",
]
mysql = [
	"mysqlclient>=2.2.8,<3",
]
postgres = [
	"psycopg[c,pool]>=3.3.3,<4"
]

[project.scripts]
miruzo-import-gataku = "scripts.gataku_import:main"

[project.urls]
Repository = "https://github.com/mntone/miruzo-core"
Issues = "https://github.com/mntone/miruzo-core/issues"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["build", "tests"]
